--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,34 @@
          <artifactId>tomcat7-maven-plugin</artifactId>
          <version>2.2</version>
       </dependency>
+      
+	<!-- Spring Security Core -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>5.7.3</version> <!-- 사용하는 Spring 버전에 맞게 조정 -->
+</dependency>
 
+<!-- Spring Security Web -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>5.7.3</version>
+</dependency>
 
+<!-- Spring Security Config -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>5.7.3</version>
+</dependency>
+
+<!-- Apache Commons Text for escaping HTML -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-text</artifactId>
+    <version>1.9</version>
+</dependency>
       <!--
       https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
       <dependency>
